--- a/lessons_in_mooc/lessons_in_mooc.vcxproj.filters
+++ b/lessons_in_mooc/lessons_in_mooc.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="Array.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="448.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.c">
