--- a/lessons_in_mooc/lessons_in_mooc.vcxproj
+++ b/lessons_in_mooc/lessons_in_mooc.vcxproj
@@ -123,6 +123,7 @@
     <ClCompile Include="main.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="189.h" />
     <ClInclude Include="448.h" />
     <ClInclude Include="665.h" />
     <ClInclude Include="Array.h" />
