--- a/lessons_in_mooc/lessons_in_mooc.vcxproj.filters
+++ b/lessons_in_mooc/lessons_in_mooc.vcxproj.filters
@@ -27,12 +27,21 @@
     <ClInclude Include="189.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Stack.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="ArrayStack.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.c">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Array.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="ArrayStack.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
