Stack has done, the new problem is 155 a question about stack. the problem is that the function malloc can not return to a struct variable, but it can return to one in other file.

--- a/lessons_in_mooc/lessons_in_mooc.vcxproj
+++ b/lessons_in_mooc/lessons_in_mooc.vcxproj
@@ -120,10 +120,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Array.c" />
-    <ClCompile Include="ArrayStack.c" />
     <ClCompile Include="main.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="155.h" />
     <ClInclude Include="189.h" />
     <ClInclude Include="448.h" />
     <ClInclude Include="665.h" />
