--- a/lessons_in_mooc/lessons_in_mooc.vcxproj.filters
+++ b/lessons_in_mooc/lessons_in_mooc.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="ArrayQueue.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="LoopQueue.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.c">
