--- a/lessons_in_mooc/lessons_in_mooc.vcxproj
+++ b/lessons_in_mooc/lessons_in_mooc.vcxproj
@@ -126,6 +126,7 @@
     <ClInclude Include="155.h" />
     <ClInclude Include="189.h" />
     <ClInclude Include="448.h" />
+    <ClInclude Include="457.h" />
     <ClInclude Include="665.h" />
     <ClInclude Include="Array.h" />
     <ClInclude Include="ArrayQueue.h" />
