--- a/lessons_in_mooc/lessons_in_mooc.vcxproj.filters
+++ b/lessons_in_mooc/lessons_in_mooc.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="LoopQueue.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="457.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.c">
