LinkedList and LinkedListStack have been done

--- a/lessons_in_mooc/lessons_in_mooc.vcxproj
+++ b/lessons_in_mooc/lessons_in_mooc.vcxproj
@@ -122,6 +122,7 @@
     <ClCompile Include="Array.c" />
     <ClCompile Include="ArrayQueue.c" />
     <ClCompile Include="ArrayStack.c" />
+    <ClCompile Include="LinkedList.c" />
     <ClCompile Include="LoopQueue.c" />
     <ClCompile Include="main.c" />
   </ItemGroup>
@@ -135,6 +136,7 @@
     <ClInclude Include="ArrayQueue.h" />
     <ClInclude Include="ArrayStack.h" />
     <ClInclude Include="LinkedList.h" />
+    <ClInclude Include="LinkedListStack.h" />
     <ClInclude Include="LoopQueue.h" />
     <ClInclude Include="Queue.h" />
     <ClInclude Include="Stack.h" />
