--- a/lessons_in_mooc/lessons_in_mooc.vcxproj
+++ b/lessons_in_mooc/lessons_in_mooc.vcxproj
@@ -130,6 +130,7 @@
   <ItemGroup>
     <ClInclude Include="155.h" />
     <ClInclude Include="189.h" />
+    <ClInclude Include="203.h" />
     <ClInclude Include="448.h" />
     <ClInclude Include="457.h" />
     <ClInclude Include="665.h" />
