--- a/lessons_in_mooc/lessons_in_mooc.vcxproj
+++ b/lessons_in_mooc/lessons_in_mooc.vcxproj
@@ -123,6 +123,7 @@
     <ClCompile Include="ArrayQueue.c" />
     <ClCompile Include="ArrayStack.c" />
     <ClCompile Include="LinkedList.c" />
+    <ClCompile Include="LinkedListQueue.c" />
     <ClCompile Include="LinkedListStack.c" />
     <ClCompile Include="LoopQueue.c" />
     <ClCompile Include="main.c" />
@@ -137,6 +138,7 @@
     <ClInclude Include="Array.h" />
     <ClInclude Include="ArrayQueue.h" />
     <ClInclude Include="ArrayStack.h" />
+    <ClInclude Include="BST.h" />
     <ClInclude Include="LinkedList.h" />
     <ClInclude Include="LinkedListQueue.h" />
     <ClInclude Include="LinkedListStack.h" />
