There was a more advanced method to 804

--- a/lessons_in_mooc/lessons_in_mooc.vcxproj
+++ b/lessons_in_mooc/lessons_in_mooc.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="BST.h" />
     <ClInclude Include="BSTSet.h" />
     <ClInclude Include="LinkedList.h" />
+    <ClInclude Include="LinkedListMap.h" />
     <ClInclude Include="LinkedListQueue.h" />
     <ClInclude Include="LinkedListSet.h" />
     <ClInclude Include="LinkedListStack.h" />
