--- a/lessons_in_mooc/lessons_in_mooc.vcxproj.filters
+++ b/lessons_in_mooc/lessons_in_mooc.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="804.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="LinkedListMap.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.c">
