MaxHeap test has been done

--- a/lessons_in_mooc/lessons_in_mooc.vcxproj
+++ b/lessons_in_mooc/lessons_in_mooc.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="LoopQueue.h" />
     <ClInclude Include="MaxHeap.h" />
     <ClInclude Include="Queue.h" />
+    <ClInclude Include="SortMethod.h" />
     <ClInclude Include="Stack.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
