--- a/lessons_in_mooc/lessons_in_mooc.vcxproj.filters
+++ b/lessons_in_mooc/lessons_in_mooc.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="MaxHeap.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="SortMethod.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.c">
