--- a/lessons_in_mooc/lessons_in_mooc.vcxproj.filters
+++ b/lessons_in_mooc/lessons_in_mooc.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="SortMethod.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="973.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.c">
