--- a/lessons_in_mooc/lessons_in_mooc.vcxproj
+++ b/lessons_in_mooc/lessons_in_mooc.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="LoopQueue.h" />
     <ClInclude Include="MaxHeap.h" />
     <ClInclude Include="Queue.h" />
+    <ClInclude Include="SegmentTree.h" />
     <ClInclude Include="SortMethod.h" />
     <ClInclude Include="Stack.h" />
   </ItemGroup>
